--- a/package.json
+++ b/package.json
@@ -4,24 +4,12 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
-    "@date-io/date-fns": "^1.3.9",
-    "@material-ui/core": "^4.4.2",
-    "@material-ui/icons": "^4.0.0",
-    "@material-ui/pickers": "^3.2.6",
-    "@material-ui/styles": "^4.4.1",
-    "axios": "^0.21.2",
-    "bootstrap": "^4.3.1",
-    "date-fns": "^2.0.0-beta.5",
-    "jquery": "^3.4.0",
-    "moment": "^2.29.4",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.6.6",
-    "react-dom": "^16.8.6",
-    "react-popupbox": "^2.0.8",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "^5.0.1",
-    "reactstrap": "^7.1.0",
-    "typescript": "^3.4.5"
+    "@material-ui/core": "^4.12.4",
+    "axios": "^0.27.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.3",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +23,11 @@
       ">0.2%",
       "not dead",
       "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
