--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^5.15.21",
     "axios": "^0.27.2",
+    "lucide-react": "^0.514.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "recharts": "^2.15.3"
   },
   "scripts": {
     "start": "react-scripts start",
